Compass z-index fixed on unfold.

--- a/about.html
+++ b/about.html
@@ -518,9 +518,9 @@ On mobile, it should look like
 			<script src="assets/js/util.js"></script> -->
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/compass.js"></script>
-      <script src="assets/js/Article.js"></script>
+      <!-- <script src="assets/js/Article.js"></script>
       <script src="assets/js/Carousel.js"></script>
-      <script src="assets/js/Menu.js"></script>
+      <script src="assets/js/Menu.js"></script> -->
 
 	</body>
 </html>
