--- a/index.html
+++ b/index.html
@@ -201,9 +201,14 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
       <h2>Keep track of donors, easier!</h2>
       <p>Save their contact information!</p>
       <p>Track their last contact date so you don't annoy them too often!</p>
+
       <p>Add their donation history!</p>
       <p>Keep track of donation allocations!</p>
       <p>Feed malnourished children faster!</p>
+
+      <p>Keep track of donors</p>
+      <p>See donor's donation history.</p>
+      <p>Contact donors with more EFFICIENT AGILITY.</p>
     </div>
     </section>
     <section id="two" class="main style1">
