Color tweak. Images cropped to match ratio.

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/brandoncampbell.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/brandoncampbellcrop.jpg" alt="" /></span>
 							<h3>Brandon Campbell</h3>
 							<p>Server Architect</p>
 							<ul class="actions special">
@@ -140,7 +140,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="images/modestotamayo.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/modestotamayocrop.jpg" alt="" /></span>
 							<h3>Modesto Tamayo</h3>
 							<p>Webapp Architect</p>
 							<ul class="actions special">
