--- a/info.html
+++ b/info.html
@@ -97,7 +97,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 			</section> -->
 
 		<!-- Two -->
-			<!-- <section id="two" class="main style2">
+			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
@@ -121,7 +121,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 		<!-- Three -->
 			<section id="three" class="main style1 special">
@@ -174,7 +174,7 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 			</section> -->
 
 		<!-- Five -->
-		<!--
+
 			<section id="five" class="main style1">
 				<div class="container">
 					<header class="major special">
@@ -493,7 +493,7 @@ On mobile, it should look like
 
 				</div>
 			</section>
-		-->
+		
 
 		<!-- Footer -->
 			<section id="footer">
