Post project cleanup.

--- a/index.html
+++ b/index.html
@@ -5,17 +5,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 
-<!-- Pitch: A donor management app that allows for donor communication tracking and easy user sign up.
-MVP: Board members can log in and see a list of donors and the time they were last contacted. User can log in and add a donor, their contact info, a list of their past donations, location they allocated their donation to (optional) and update the date and method of last communication.
-
-  WEB UI GOALS (Landing Page):
-  Inform donor services person they are at the right place
-  Inform donor services person they will find their info here
-  Lead donor Services person to login (links to React app)
-  Make sure web page is Fully Responsive
-  Show off a bit?
--->
-
 <html>
 	<head>
 		<title>Bountiful Children's Foundation</title>
@@ -176,38 +165,17 @@ MVP: Board members can log in and see a list of donors and the time they were la
 			</section>
 
       <section>
-      <!-- <ul class="actions special">
-        <li><a href="login.html" class="button wide primary">Log In</a></li>
-        <li><a href="login.html" class="button wide">Request Account</a></li>
-      </ul>
-    </section> -->
-
-      <!-- "Bountiful Logo
-Cool Splash Starts
-I got what you need.
-[LOGIN]
-[REGISTER]
-[MORE INFO?]
-Cool Splash Ends
-
-On desktop the logo should disappear into the corner maybe?
-oh, exploit the way opacity works, make a navbar and then on desktop, opacity it and right-justify it, and give it a border?
-no wait, that's not what happens. hmmm. set it in the header, and then pop it into the top-right corner from a bar? yeah.
--->
 
 		<!-- One -->
     <section id="one" class="main style2">
       <div class="container">
       <h2>Keep track of donors, easier!</h2>
       <p>Save their contact information!</p>
-      <p>Track their last contact date so you don't annoy them too often!</p>
+      <p>Track the last date you contacted them on!</p>
 
       <p>Add their donation history!</p>
       <p>Keep track of donation allocations!</p>
       <p>Feed malnourished children faster!</p>
-
-      <p>Keep track of donors</p>
-      <p>See donor's donation history.</p>
       <p>Contact donors with more EFFICIENT AGILITY.</p>
     </div>
     </section>
@@ -238,16 +206,8 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 			</section>
 
 		<!-- Scripts -->
-			<!-- <script src="assets/js/jquery.min.js"></script> -->
-			<!-- <script src="assets/js/jquery.scrolly.min.js"></script> -->
-			<!-- <script src="assets/js/browser.min.js"></script> -->
-			<!-- <script src="assets/js/breakpoints.min.js"></script> -->
-			<!-- <script src="assets/js/util.js"></script> -->
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/compass.js"></script>
-      <script src="assets/js/Article.js"></script>
-      <script src="assets/js/Carousel.js"></script>
-      <script src="assets/js/Menu.js"></script>
 
 	</body>
 </html>
