--- a/about.html
+++ b/about.html
@@ -21,97 +21,13 @@
       <a href="#" id="compass-link"><i id="compass-icon" class="major icon fa-compass"></i></a>
       <div id="nav-panel" class="invisible">
         <a href="https://donor-management.netlify.com/" class="button nav-button primary">Log In</a>
-        <!-- <a href="#" class="button nav-button">Sign Up</a> -->
         <a href="about.html" class="button nav-button">About Us</a>
         <a href="index.html" class="button nav-button">Return</a>
       </div>
     </nav>
-    <!-- <header><img src="bcfassets/Bountiful-logo.png" /></header> -->
+
 		<!-- Header -->
-      <section>
-      <!-- <ul class="actions special">
-        <li><a href="login.html" class="button wide primary">Log In</a></li>
-        <li><a href="login.html" class="button wide">Request Account</a></li>
-      </ul>
-    </section> -->
-
-      <!-- "Bountiful Logo
-Cool Splash Starts
-I got what you need.
-[LOGIN]
-[REGISTER]
-[MORE INFO?]
-Cool Splash Ends
-
-On desktop the logo should disappear into the corner maybe?
-oh, exploit the way opacity works, make a navbar and then on desktop, opacity it and right-justify it, and give it a border?
-no wait, that's not what happens. hmmm. set it in the header, and then pop it into the top-right corner from a bar? yeah.
--->
-
-		<!-- One -->
-    <section id="one" class="main style2">
-      <div class="container">
-      <h2>Keep track of donors, easier!</h2>
-      <p>Save their contact information!</p>
-      <p>Track their last contact date so you don't annoy them too often!</p>
-      <p>Add their donation history!</p>
-      <p>Keep track of donation allocations!</p>
-      <p>Feed malnourished children faster!</p>
-    </div>
-    </section>
-    <section id="two" class="main style1">
-      <div class="container wordbox">
-        <h3>Built By</h3>
-        <p>the New Developers of</p>
-        <h4>Lambda School <svg class="d-block" width="1em" viewbox="75 80 177 180" xmlns="http://www.w3.org/2000/svg" focusable="false"><title>Lambda</title><path d="M151.48572955 113.62307213l-40.54266566 72.53066485h22.85333277l29.78266592-53.83333199 29.78266592 53.83333199h22.85333276l-40.54266565-72.53066485z" fill="#B22222" /><path d="M163.37039592 235.8932024l-62.28666511-44.23333222v-90.92399773h125.02666354v90.62799773zM81.95573128 82.19853958V201.2265366l81.41466464 57.85866522 81.83199795-58.15466521V82.19853958z" fill="#B22222" /></svg></h4>
-        <a href="about.html" class="button nav-button">About Us</a>
-
-    </div>
-    </section>
-  </section>
-			<!-- <section id="one" class="main style1">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan et interdum mi ante adipiscing. A nunc lobortis non nisl amet vis sed volutpat aclacus nascetur ac non. Lorem curae et ante amet sapien sed tempus adipiscing id accumsan.</p>
-						</div>
-						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
-						</div>
-					</div>
-				</div>
-			</section> -->
-
-		<!-- Two -->
-			<!-- <section id="two" class="main style2">
-				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-6 col-12-medium">
-							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
-							</ul>
-						</div>
-						<div class="col-6 col-12-medium">
-							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
-							</header>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
-							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
-						</div>
-					</div>
-				</div>
-			</section> -->
+      <!-- <section> -->
 
 		<!-- Three -->
 			<section id="three" class="main style1 special">
@@ -149,20 +65,6 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 				</div>
 			</section>
 
-		<!-- Four -->
-			<!-- <section id="four" class="main style2 special">
-				<div class="container">
-					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
-					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button wide primary">Sign Up</a></li>
-						<li><a href="#" class="button wide">Learn More</a></li>
-					</ul>
-				</div>
-			</section> -->
-
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
@@ -181,9 +83,6 @@ no wait, that's not what happens. hmmm. set it in the header, and then pop it in
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
       <script src="assets/js/compass.js"></script>
-      <!-- <script src="assets/js/Article.js"></script>
-      <script src="assets/js/Carousel.js"></script>
-      <script src="assets/js/Menu.js"></script> -->
 
 	</body>
 </html>
